# unframed

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.marscode/: deviceInfo.json
docs/: DEEPSEEK_API_GUIDE.md  HELP.md  SEED_SPEC.md
seeds/: cyberpunk.md  lonely_star.json  loop_day.md  midnight_frequency.md  rust_oasis.md  sudo_apt_survival.json  tide_prison.json  tide_prison.md
src/unframed/: __about__.py  __init__.py  cli.py  engine.py  render.py  settings.py
src/unframed/seeds/: cyberpunk.json  cyberpunk.md  hourly_room.json  hourly_room.md  lonely_star.md  loop_day.json  loop_day.md  midnight_frequency.json  neon_verdict.json  neon_verdict.md  rust_oasis.json  sudo_apt_survival.md  underground_throne.json  underground_throne.md
src/unframed/tui/: __init__.py  app.py
tests/: __init__.py  test_engine.py  test_plot.py  test_render.py  test_settings.py
